Prevent local menu button stretching

--- a/R7.Epsilon/Menu/Mega2Epsilon.less
+++ b/R7.Epsilon/Menu/Mega2Epsilon.less
@@ -203,7 +203,7 @@ ul.megamenu .sub
 
 .skin-local-menu 
 {
-    display:inline-block; 
+    display:inline-block;
 
     ul.megamenu 
     { 
@@ -215,6 +215,11 @@ ul.megamenu .sub
             display:inline-block;
             margin-right:5px;
             margin-bottom:2px;
+
+            // prevent stretching before item content will be replaced
+            // REVIEW: Needs to be tested
+            max-width:47px;
+            overflow:hidden;
 
             color:transparent; // hide page title
 
